implementacion inicial de getAll y register
